--- a/index.css
+++ b/index.css
@@ -29,20 +29,25 @@ body {
     height: 200px;
     background-color: black;
     overflow: hidden;
+    margin-bottom: 20px;
 }
 
 .mainimage {
     width: 100%;
     object-fit: scale-down;
+
 }
 
 
 .textbox01 {
     width: 100%;
-    height: 20px;
-    font-size: 2em;
+    font-size: 35px;
     font-weight: 600;
-    padding:20px;
+    /* padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px; */
+    display: inline;
+    margin: 20px;
 }
 .textbox02 {
     width: 100%;
@@ -191,7 +196,7 @@ td {
     border-bottom: 1px solid white;
 }
 .sartoriusid {
-    font-size: 13px;
+    font-size: 12px;
     font-weight: 500;
     color: white;
     list-style: none;
